# shop

./: .gitignore  pyproject.toml
src/: .env  main.py
src/alembic/versions/: 2024_06_18_1721-e3de344b68e4_create_products_table.py  2024_06_19_1720-5cbe6254f371_create_categories_table.py  2024_06_19_1816-5961fc5a8fc7_create_users_table.py  2024_06_20_1627-472632e5a2d4_add_category_id_column_in_product_table.py  2024_06_20_1638-6ea830e970c2_rename_category_in_category_name_in_.py  2024_06_26_1431-8f24ddbad40a_update_user_table.py
src/api/: __init__.py
src/api/product/: __init__.py  crud.py  dependencies.py  product.py  schemas.py  views.py  views_category.py  views_product.py
src/api/user/: __init__.py  crud.py  dependencies.py  schemas.py  util.py  views.py
src/certs/: jwt-private.pem  jwt-public.pem
src/core/: config.py
src/core/models/: __init__.py  base.py  category.py  db_helper.py  product.py  user.py
src/core/models/mixins/: __init__.py  int_id_pk.py
