[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["Avaake <133997731+Avaake@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic-settings = "^2.3.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
aiomysql = "^0.2.0"
alembic = "^1.13.1"
bcrypt = "^4.1.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
